--- a/codeSprite/Libs/SGHTTPServer/Web/index.html
+++ b/codeSprite/Libs/SGHTTPServer/Web/index.html
@@ -4,9 +4,12 @@
         <meta http-equiv=\"content-type\" content=\"text/html; charset=UTF-8\">
     </head>
     <style>
-        
+      a { text-decoration: none; }        
     </style>
     <body>
+        <div class="file">
+            %MyFiles%
+        </div>
         <div class="form">
             <form action="upload.html" method="post" enctype="multipart/form-data" accept-charset="utf-8">
                 <input type="file" name="upload1"><br/>
